# sdf_atlas

./: .gitignore  CMakeLists.txt
src/: gl_utils.h  main.cpp
